# ssh-remote

./: .gitignore  Cargo.toml  README.md  README_en.md  README_zh.md  build.rs
.cargo/: config.toml
docs/superpowers/plans/: 2026-06-16-one-line-install-plan.md
scripts/: build-releases.sh
src/: integration_test.rs  main.rs  web.rs
src/agent/: client.rs  exec_sessions.rs  fs.rs  mod.rs  shell.rs
src/proto/: mod.rs
src/relay/: admin.rs  admin_page.html  auth.rs  mcp.rs  mod.rs  recorder.rs  session.rs  ws.rs
web/: download.html  files.js  index.html  install.sh  session.html  session.js  style.css  term.js  ws.js
